Fix logo alignment on 404 page

--- a/src/client/servable/css/error.css
+++ b/src/client/servable/css/error.css
@@ -76,6 +76,7 @@ button {
 #info-container #info-bar .logo {
   height: 6vw;
   width: auto;
+  transform: translateY(20%);
 }
 
 @-webkit-keyframes blink {
